# LyricsMPRIS-Rust

./: Cargo.toml  README.md  UPDATE.md
.github/: copilot-instructions.md
src/: event.rs  main.rs  pool.rs
src/lyrics/: database.rs  mod.rs
src/lyrics/providers/: lrclib.rs  lrcx.rs  mod.rs  musixmatch.rs
src/mpris/: metadata.rs
