[package]
name = "lyricsmpris"
version = "2.0.0"
edition = "2024"

[dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
zvariant = "5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.45", features = ["full"] }
crossterm = "0.29"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
urlencoding = "2.1"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
once_cell = "1.21"
thiserror = "2.0"
textwrap = "0.16"
unicode-segmentation = "1.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
zstd = "0.13"